Fix for broken layouts

--- a/css/colpick.css
+++ b/css/colpick.css
@@ -268,98 +268,112 @@ colpick Color Picker / colpick.com
 }
 
 /*full layout with no submit button*/
-.colpick .colpick_full_ns  .colpick_submit, .colpick .colpick_full_ns .colpick_current_color{
+.colpick.colpick_full_ns  .colpick_submit,
+.colpick.colpick_full_ns .colpick_current_color{
 	display:none;
 }
-.colpick .colpick_full_ns .colpick_new_color {
+.colpick.colpick_full_ns .colpick_new_color {
 	width: 130px;
 	height: 25px;
 }
-.colpick .colpick_full_ns .colpick_rgb_r, .colpick .colpick_full_ns .colpick_hsb_h {
+.colpick.colpick_full_ns .colpick_rgb_r,
+.colpick.colpick_full_ns .colpick_hsb_h {
 	top: 42px;
 }
-.colpick .colpick_full_ns .colpick_rgb_g, .colpick .colpick_full_ns .colpick_hsb_s {
+.colpick.colpick_full_ns .colpick_rgb_g,
+.colpick.colpick_full_ns .colpick_hsb_s {
 	top: 73px;
 }
-.colpick .colpick_full_ns .colpick_rgb_b, .colpick .colpick_full_ns .colpick_hsb_b {
+.colpick.colpick_full_ns .colpick_rgb_b,
+.colpick.colpick_full_ns .colpick_hsb_b {
 	top: 104px;
 }
-.colpick .colpick_full_ns .colpick_hex_field {
+.colpick.colpick_full_ns .colpick_hex_field {
 	top: 135px;
 }
 
 /*rgbhex layout*/
-.colpick .colpick_rgbhex .colpick_hsb_h, .colpick .colpick_rgbhex .colpick_hsb_s, .colpick .colpick_rgbhex .colpick_hsb_b {
+.colpick.colpick_rgbhex .colpick_hsb_h,
+.colpick.colpick_rgbhex .colpick_hsb_s,
+.colpick.colpick_rgbhex .colpick_hsb_b {
 	display:none;
 }
-.colpick .colpick_rgbhex {
+.colpick.colpick_rgbhex {
 	width:282px;
 }
-.colpick .colpick_rgbhex .colpick_field, .colpick .colpick_rgbhex .colpick_submit {
+.colpick.colpick_rgbhex .colpick_field,
+.colpick.colpick_rgbhex .colpick_submit {
 	width:68px;
 }
-.colpick .colpick_rgbhex .colpick_new_color {
+.colpick.colpick_rgbhex .colpick_new_color {
 	width:34px;
 	border-right:none;
 }
-.colpick .colpick_rgbhex .colpick_current_color {
+.colpick.colpick_rgbhex .colpick_current_color {
 	width:34px;
 	left:240px;
 	border-left:none;
 }
 
 /*rgbhex layout, no submit button*/
-.colpick .colpick_rgbhex_ns  .colpick_submit, .colpick .colpick_rgbhex_ns .colpick_current_color{
+.colpick.colpick_rgbhex_ns  .colpick_submit,
+.colpick.colpick_rgbhex_ns .colpick_current_color{
 	display:none;
 }
-.colpick .colpick_rgbhex_ns .colpick_new_color{
+.colpick.colpick_rgbhex_ns .colpick_new_color{
 	width:68px;
 	border: 1px solid #8f8f8f;
 }
-.colpick .colpick_rgbhex_ns .colpick_rgb_r {
+.colpick.colpick_rgbhex_ns .colpick_rgb_r {
 	top: 42px;
 }
-.colpick .colpick_rgbhex_ns .colpick_rgb_g {
+.colpick.colpick_rgbhex_ns .colpick_rgb_g {
 	top: 73px;
 }
-.colpick .colpick_rgbhex_ns .colpick_rgb_b {
+.colpick.colpick_rgbhex_ns .colpick_rgb_b {
 	top: 104px;
 }
-.colpick .colpick_rgbhex_ns .colpick_hex_field {
+.colpick.colpick_rgbhex_ns .colpick_hex_field {
 	top: 135px;
 }
 
 /*hex layout*/
-.colpick .colpick_hex .colpick_hsb_h, .colpick .colpick_hex .colpick_hsb_s, .colpick .colpick_hex .colpick_hsb_b, .colpick .colpick_hex .colpick_rgb_r, .colpick .colpick_hex .colpick_rgb_g, .colpick .colpick_hex .colpick_rgb_b {
+.colpick.colpick_hex .colpick_hsb_h,
+.colpick.colpick_hex .colpick_hsb_s,
+.colpick.colpick_hex .colpick_hsb_b,
+.colpick.colpick_hex .colpick_rgb_r,
+.colpick.colpick_hex .colpick_rgb_g,
+.colpick.colpick_hex .colpick_rgb_b {
 	display:none;
 }
-.colpick .colpick_hex {
+.colpick.colpick_hex {
 	width:206px;
 	height:201px;
 }
-.colpick .colpick_hex .colpick_hex_field {
+.colpick.colpick_hex .colpick_hex_field {
 	width:72px;
 	height:25px;
 	top:168px;
 	left:80px;
 }
-.colpick .colpick_hex .colpick_hex_field div, .colpick_hex .colpick_hex_field input {
+.colpick.colpick_hex .colpick_hex_field div,
+.colpick.colpick_hex .colpick_hex_field input {
 	height: 25px;
 	line-height: 25px;
 }
-.colpick .colpick_hex .colpick_new_color {
+.colpick.colpick_hex .colpick_new_color {
 	left:9px;
 	top:168px;
 	width:30px;
 	border-right:none;
 }
-.colpick .colpick_hex .colpick_current_color {
+.colpick.colpick_hex .colpick_current_color {
 	left:39px;
 	top:168px;
 	width:30px;
 	border-left:none;
 }
-.colpick .colpick_hex .colpick_submit {
+.colpick.colpick_hex .colpick_submit {
 	left:164px;
 	top: 168px;
 	width:30px;
@@ -368,55 +382,58 @@ colpick Color Picker / colpick.com
 }
 
 /*hex layout, no submit button*/
-.colpick .colpick_hex_ns .colpick_submit, .colpick .colpick_hex_ns .colpick_current_color {
+.colpick.colpick_hex_ns .colpick_submit,
+.colpick.colpick_hex_ns .colpick_current_color {
 	display:none;
 }
-.colpick .colpick_hex_ns .colpick_hex_field {
+.colpick.colpick_hex_ns .colpick_hex_field {
 	width:80px;
 }
-.colpick .colpick_hex_ns .colpick_new_color{
+.colpick.colpick_hex_ns .colpick_new_color{
 	width:60px;
 	border: 1px solid #8f8f8f;
 }
 
 /*Dark color scheme*/
-.colpick .colpick_dark {
+.colpick.colpick_dark {
 	background: #161616;
 	border-color: #2a2a2a;
 }
-.colpick .colpick_dark .colpick_color {
+.colpick.colpick_dark .colpick_color {
 	outline-color: #333;
 }
-.colpick .colpick_dark .colpick_hue {
+.colpick.colpick_dark .colpick_hue {
 	border-color: #555;
 }
-.colpick .colpick_dark .colpick_field, .colpick_dark .colpick_hex_field {
+.colpick.colpick_dark .colpick_field,
+.colpick.colpick_dark .colpick_hex_field {
 	background: #101010;
 	border-color: #2d2d2d;
 }
-.colpick .colpick_dark .colpick_field_letter {
+.colpick.colpick_dark .colpick_field_letter {
 	background: #131313;
 	border-color: #2d2d2d;
 	color: #696969;
 }
-.colpick .colpick_dark .colpick_field input, .colpick .colpick_dark .colpick_hex_field input {
+.colpick.colpick_dark .colpick_field input,
+.colpick.colpick_dark .colpick_hex_field input {
 	color: #7a7a7a;
 }
-.colpick .colpick_dark .colpick_field_uarr {
+.colpick.colpick_dark .colpick_field_uarr {
 	border-bottom-color:#696969;
 }
-.colpick .colpick_dark .colpick_field_darr {
+.colpick.colpick_dark .colpick_field_darr {
 	border-top-color:#696969;
 }
-.colpick .colpick_dark .colpick_focus {
+.colpick.colpick_dark .colpick_focus {
 	border-color:#444;
 }
-.colpick .colpick_dark .colpick_submit {
+.colpick.colpick_dark .colpick_submit {
 	background: #131313;
 	border-color:#2d2d2d;
 	color:#7a7a7a;
 }
-.colpick .colpick_dark .colpick_submit:hover {
+.colpick.colpick_dark .colpick_submit:hover {
 	background-color:#101010;
 	border-color:#444;
 }
